add ac 6.1 function

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,4 +116,15 @@ a {
   .mobile-menu {
     z-index: 9999 !important;
   }
+  
+  /* Hide number input spinners on mobile */
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
